--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!--
+    RESTAURANT PAGE CODE ALONG
+    Create a new project folder called “restaurant” with an index.html file and a styles.css file.
+    Create a simple Restaurant Page HTML page that includes:
+    - A Name
+    - Type of cuisine
+    - Location
+    - Menu options- Top 3 dishes
+    - Prices
+    - Motto or mission statement
+    Utilize the following tags:
+    <h1> - <h6>  (header) (choose 2)
+    <p> (paragraph)
+    <img> (image)
+    <a> (link)
+    *: display your menu items as a list
+    **: try to display each menu item and its corresponding price in a table
+-->
+    <h1>!!Japastries!!</h1>
+    <h2>Welcome to our Japanese-Dessert Fusion Restaurant!!!</h2>
+    <img src=“https://i.pinimg.com/originals/1b/b6/4a/1bb64ace2170fd76a2de751dc18559ff.jpg” alt=“Image of various Japanese Deserts”>
+    <p><a href=“https://shokugekinosoma.fandom.com/wiki/Momo_Akanegakubo”>Here is a link to an amazing pastery chef!!</a>
+</p>
+    <p>You can find us at 601 Lexington Ave. OR AT 155 Sonesta Ave.</p>
+    <h3>MENU:</h3>
+    <ol>
+        <li>Ice Cream Crepes ($9.50)</li>
+        <li>Sweet Rice Onigiri ($5.50)</li>
+        <li>Shaved Ice with Condensed Milk ($7.50)</li>
+        <li>Ube Cake ($15.00)</li>
+        <li>Takoyaki ($5.00)</li>
+        <li>Dim Sum ($11.00)</li>
+    </ol>
+    <h2>The Land of the Sun right on your Tongue!!</h2>
 </body>
-</html>
+</html> 
