--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -27,9 +28,8 @@
 -->
     <h1>!!Japastries!!</h1>
     <h2>Welcome to our Japanese-Dessert Fusion Restaurant!!!</h2>
-    <img src=“https://i.pinimg.com/originals/1b/b6/4a/1bb64ace2170fd76a2de751dc18559ff.jpg” alt=“Image of various Japanese Deserts”>
-    <p><a href=“https://shokugekinosoma.fandom.com/wiki/Momo_Akanegakubo”>Here is a link to an amazing pastery chef!!</a>
-</p>
+    <img src="https://i.pinimg.com/originals/1b/b6/4a/1bb64ace2170fd76a2de751dc18559ff.jpg" alt="Image of various Japanese Deserts">
+    <p><a href="https://shokugekinosoma.fandom.com/wiki/Momo_Akanegakubo">Here is a link to an amazing pastery chef!!</a></p>
     <p>You can find us at 601 Lexington Ave. OR AT 155 Sonesta Ave.</p>
     <h3>MENU:</h3>
     <ol>
